# snea-shoebox-editor

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .streamlitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  bootstrap_domains.py  bootstrap_env.py  docker-compose.yml  opencode.jsonc  pyproject.toml  snea-editor.md  streamlit_app.py  wrangler.backend.toml  wrangler.pages.toml  wrangler.toml
.githooks/: post-commit  pre-commit
.junie/: LONG_TERM_MEMORY.md  VIOLATION_LOG.jsonl  VIOLATION_LOG.md  active_task.md  active_task_template.md  ai-behavior.md  algonquian-grammar-spr.md  algonquian-shoebox.md  code-quality.md  code-standards.md  development-workflow.md  guidelines.md  mdf-guidelines-spr.md  memory.md  operational-standards.md  project-architecture.md  project-context.md  security-configuration.md  security-dependencies.md  security-logging.md  security-secrets.md  spr-pack.md  spr-unpack.md  time_tracking.md  ui-development-spr.md
.streamlit/: config.toml
1/: issue.yaml
1126/: lifecycle.yaml  plan.md  sc-summary.yaml  spec.md
1300/: spec.md
1301/: spec.md
1304/: plan.md  sc-summary.yaml
1305/: plan.md  sc-summary.yaml  spec.md
1306/: issue.yaml  plan.md  sc-summary.yaml
1321/: plan.md
1323/: remote.md  spec.md  state.md
1332/: plan.md  sc-dependency-contract.yaml  sc-pipeline-readiness.yaml  sc-summary.yaml  spec.md
1334/: contract.yaml  plan.md  problem.yaml  sc-summary.yaml  state.yaml
1339/: plan.md
1355/: issue.yaml  revision-re-entry-contract.yaml  sc-summary.yaml  spec-to-plan-handoff.yaml  spec.md  verification-consistency-contract.yaml
1356/: issue.yaml  lifecycle.yaml  plan-01.md  plan-02.md  plan-03.md  plan.md  remote-exec-summary.md  revision-re-entry-contract.yaml  sc-summary.yaml  spec-to-plan-handoff.yaml  spec.md  verification-consistency-contract.yaml  verification-sweep-results.md
1358/: spec.md
1359/: issue.yaml  plan.md  spec.md
1360/: issue.yaml
1362/: spec.md
1363/: spec.md
1364/: spec.md
1365/: spec.md
1366/: spec.md
1367/: spec.md
1368/: spec.md
1369/: spec.md
401/: plan.md  revision-re-entry-contract.yaml  sc-summary.yaml  spec.md  verification-consistency-contract.yaml
ai_bin/: guidelines  guidelines-search  help  jupyter-start  jupyter-stop  memory  memory-stats  nb  nb-add-cell  nb-create  nb-edit  nb-find  nb-outputs  nb-source  plan  plans  plans-dump  py  py-find  py-structure  session_init.py  src-search  start  violation-log
docker/: Dockerfile  Dockerfile.eval  Dockerfile.test  docker-compose.yml
docs/: ACTIVE_TASK.md  ARCHITECTURE.md  BUG_REPORT_AI_CHAT_FONT.md  Morfessor.md  REQUIREMENTS.md  git-workflow-migration-guide.md  language-tagging.md  runbook-github-pat-recovery.md  runbook-github-pat-setup.md  streamlit-dev-workflow.md  ui-guidelines.md
documentation/: ACTIVE_TASK.md  EMBEDDING_EVAL_COPILOT_INSTRUCTIONS.md  EMBEDDING_EVAL_WORKFLOW.md  Morfessor.md  TODO_PERSISTENT_LOGIN.md
launchers/: AI_AGENT.md  Kill_Streamlit.xml  Ollama_Qwen.xml  Streamlit.xml
paper/: build.sh  master.tex  section-1-overview.tex
plans/: TODO.md  adapt-newsrx-guidelines-plan.md  batch-rollback-no-sessions-diagnosis.md  batch-rollback-sql-fix.md  fix-error-dialog-sanitization.md  fix-error-dialog-show-exception-message.md  fix-failed-tests.md  fix-fts-pipe-syntax-error.md  fix-preexisting-failures.md  fix-sequence-desync-plan.md  plan-apply-now-discard-bug.md  plan-bottom-bulk-buttons-layout.md  plan-cleanup-tmp.md  plan-disable-buttons-no-records.md  plan-enforce-plan-updates-and-archiving.md  plan-fast-exists-check-for-buttons.md  plan-fix-apply-now-discard-reset.md  plan-fix-rows-per-page-reset.md  plan-fix-scrollbar-hover-disappear.md  plan-ignore-jetbrains-default-system-prompt.md  plan-match-review-page-bulk-actions.md  plan-remove-redundant-labels.md  plan-revert-batch-changes.md  plan-revert-dialog-count-fix.md  (+18 more)
(+461 files in other folders)
