[project]
name = "snea-shoebox-editor"
version = "0.1.0"
description = "SNEA Shoebox Editor infrastructure and development environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.1.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.31.0",
    "httpx>=0.25.0",
    "pytest>=7.0.0",
    "tqdm>=4.66.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "streamlit-oauth>=0.1.5",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
# Match PyCharm defaults (usually PEP 8)
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
managed = true
