[project]
name = "snea-shoebox-editor"
version = "0.1.0"
description = "SNEA Shoebox Editor infrastructure and development environment"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "PyGithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.3.6",
    "psutil>=7.2.2",
    "streamlit-oauth>=0.1.11",
    "streamlit-cookies-controller>=0.0.4",
]

[project.optional-dependencies]
local = [
    "pgserver>=0.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.ruff]
# Match PyCharm defaults (usually PEP 8)
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
# This project uses uv for dependency management.
# Streamlit Cloud may warn about 'pyproject.toml' being a Poetry file; this is a false positive.
managed = true
